// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component testing Tabs 1`] = `
<DocumentFragment>
  <div
    class="sc-guDLey eOSJFX"
  >
    <div
      class="sc-jTQCzO dqquKl"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-dmyCSP"
    >
      <button
        class="sc-hLQSwg dzBuAb"
        tabindex="0"
        value="hoge"
      >
        <div
          alignitems="center"
          class="sc-fsYfdN ioOgIH"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-beySPh kECpqC sc-eDLKkx duKwoa"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            hoge 
          </p>
        </div>
      </button>
      <button
        class="sc-hLQSwg csgFEf"
        tabindex="-1"
        value="fuga"
      >
        <div
          alignitems="center"
          class="sc-fsYfdN ioOgIH"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-beySPh kECpqC sc-eDLKkx bmQqny"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            fuga 
          </p>
        </div>
      </button>
      <div
        class="sc-gLLuof VZdEm"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component testing Tabs with badge 1`] = `
<DocumentFragment>
  <div
    class="sc-guDLey eOSJFX"
  >
    <div
      class="sc-jTQCzO dqquKl"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-dmyCSP"
    >
      <button
        class="sc-hLQSwg dzBuAb"
        tabindex="0"
        value="hoge"
      >
        <div
          alignitems="center"
          class="sc-fsYfdN cYcpjR"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-beySPh kECpqC sc-eDLKkx duKwoa"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            hoge 
          </p>
          <span
            backgroundcolor="#0B82F4"
            class="sc-iBdnpw jvDida"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            1
          </span>
        </div>
      </button>
      <button
        class="sc-hLQSwg csgFEf"
        tabindex="-1"
        value="fuga"
      >
        <div
          alignitems="center"
          class="sc-fsYfdN cYcpjR"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-beySPh kECpqC sc-eDLKkx bmQqny"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            fuga 
          </p>
          <span
            backgroundcolor="#778490"
            class="sc-iBdnpw gyNwAl"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            2
          </span>
        </div>
      </button>
      <button
        class="sc-hLQSwg csgFEf"
        tabindex="-1"
        value="piyo"
      >
        <div
          alignitems="center"
          class="sc-fsYfdN cYcpjR"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-beySPh kECpqC sc-eDLKkx bmQqny"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            piyo 
          </p>
          <span
            backgroundcolor="#778490"
            class="sc-iBdnpw gyNwAl"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            3
          </span>
        </div>
      </button>
      <div
        class="sc-gLLuof VZdEm"
      />
    </div>
  </div>
</DocumentFragment>
`;
